Fixed bidi troubles with (mobile) Opera and the bidi support is coming back. Denied wrapping of a message's subject, nick, host, and date in index.

--- a/static/main.css
+++ b/static/main.css
@@ -1,10 +1,21 @@
-span.unreg, span.reg, span.unr, span.own, span.sel,
-span.nick,
-span.subject,
-div.body,
-div.sign,
-div.pr_from, div.pr_to {
+span.nw {
+        white-space: nowrap;
+}
+
+span.lro, span.rlo {
         unicode-bidi: bidi-override;
+}
+
+span.lre, span.rle {
+        unicode-bidi: embed;
+}
+
+span.lro, span.lre {
+        direction: ltr;
+}
+
+span.rlo, span.rle {
+        direction: rtl;
 }
 
 a {text-decoration: none;}
